# barebones

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: MANIFEST.in  README.md  requirements.txt  setup.cfg
