[metadata]
name = {{cookiecutter.project_slug}}
classifiers =
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
version = attr: {{cookiecutter.project_slug}}.__version__

[options]
include_package_data = True
install_requires =
    hydra-core
    numpy
    pandas
    torch
package_dir =
    = src
packages = find:
python_requires = >={{cookiecutter.python_version}}

[options.packages.find]
where = src
