[metadata]
name = {{cookiecutter.project_slug}}
description = Insert project description here…
classifiers =
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
version = attr: {{cookiecutter.project_slug}}.__version__

[options]
install_requires =
    numpy
    pandas
    torch
    {% if cookiecutter.hydra|int -%}hydra-core{% endif %}
package_dir =
    = src
packages = find:
python_requires = >=3.7.0
{% if cookiecutter.hydra|int -%}
include_package_data = True
{% endif %}

[options.packages.find]
where = src
